--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Narsimmayemul/BackEnd-Server#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "json-serve": "^0.1.0",
     "json-server": "^0.17.4"
   }
 }
