--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-server",
+  "name": "project_data",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,18 +9,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Narsimmayemul/BackEnd-Server.git"
+    "url": "git+https://github.com/UmaSahni/project_data.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Narsimmayemul/BackEnd-Server/issues"
+    "url": "https://github.com/UmaSahni/project_data/issues"
   },
-  "homepage": "https://github.com/Narsimmayemul/BackEnd-Server#readme",
+  "homepage": "https://github.com/UmaSahni/project_data#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "json-serve": "^0.1.0",
-    "json-server": "^0.17.4"
+    "json-server": "^0.17.1"
   }
 }
